2018-??-??: 2.2.3
	enhaencement: supporting includes with new filter and filterFrom options
	change: needing at least Lua 5.2 (was 5.1)
	change: if the target/targetdir ands with a ':' do not append
			a trailing '/' to it, since that would change it from homedir to rootdir!
	add: example for Amazon S3 Bucket (Daniel Miranda)
	fix: setting stdout/stderr to linebuffer mode.

2017-02-16: 2.2.2
	fix: checkgauge 'insist'
	fix: no partial path exlusion tests
	fix: write pid of forked process in pidfile
	fix: crash on not reachable target
	workaround:
		changed back to filter style rsync calling
		until https://bugzilla.samba.org/show_bug.cgi?id=12569
		is fixed and released.

2017-01-05: 2.2.1
	enhancement: now always using filter lists with rysnc
		instead of include/exclude lists taking advantage of the new --delete-missing-args
		parameter to delete files on target.
		>>> Thus Lsyncd 2.2.1 needs rsync >= 3.1.0
	change: added "tests" make target to run all the tests.
	fix: crash due to typo in changed ^path, ^pathdir, ^pathname

2017-01-04: 2.2.0
	enhancement: add rsync options:
		"append",
		"append_verify",
		"backup",
		"backup_dir",
		"chmod",
		"chown",
		"copy_dirlinks",
		"existing",
		"groupmap",
		"omit_dir_times",
		"omit_link_times",
		"suffix,"
		"usermap",
	enhancement: settings{ } now checks for unknown entries and errors if so.
	change: Level3 scripts ^path,^pathdir and ^pathname now don't start with a slash.
	change: Lsyncd now writes a startup log message before daemonizing
		does in case logging fails, it is recognized before it cannot
		message anything about it, since it deamonized
	change: compatible with Lua5.3 (along with 5.1 and 5.2)
	change: _verbatim forced for 'exitcodes' entry.
	change: manpage is not rebuild by default.
		it is provided precompiled.
	change: faulty/deprecated config files that use settings = { ... }, with equal sign
		are no longer worked around.
	change: default.direct now calls copy with -p