@@ -5,6 +5,8 @@
 			a trailing '/' to it, since that would change it from homedir to rootdir!
 	add: example for Amazon S3 Bucket (Daniel Miranda)
 	fix: setting stdout/stderr to linebuffer mode.
+	fix: cmake lua detection, will resort to "lua" and "luac" binaries only if
+	     more specific suffixes (e.g. luac5.3) are not available
 
 2017-02-16: 2.2.2
 	fix: checkgauge 'insist'
